Basic restructuring for Gradle multi-project build