@@ -1,6 +1,6 @@
 // Establish version and status
-ext.releaseVersion = '1.1.3' // TEMPLATE: Set to latest release
-ext.githubProjectName = rootProject.name // TEMPLATE: change to match github project, if it doesn't match project name
+ext.releaseVersion = '1.1-SNAPSHOT'
+ext.githubProjectName = 'Priam'
 
 buildscript {
     repositories { mavenCentral() }
@@ -33,7 +33,7 @@ subprojects {
         }
     }
 
-    group = "com.netflix.${githubProjectName}" // TEMPLATE: Set to organization of project
+    group = "com.netflix.${name}"
 
     dependencies {
         compile     'javax.ws.rs:jsr311-api:1.1.1'
@@ -43,20 +43,24 @@ subprojects {
     }
 }
 
-project(':template-client') {
+project(':priam-core') {
     dependencies {
         compile 'org.slf4j:slf4j-api:1.6.3'
         compile 'com.sun.jersey:jersey-client:1.11'
     }
 }
 
-project(':template-server') {
+project(':priam-war') {
     apply plugin: 'war'
     apply plugin: 'jetty'
     dependencies {
         compile 'com.sun.jersey:jersey-server:1.11'
         compile 'com.sun.jersey:jersey-servlet:1.11'
-        compile project(':template-client')
+        compile project(':priam-core')
+    }
+    test {
+        // -Xms256m -Xmx1024m -XX:MaxPermSize=512m
+        // -javaagent:"${settings.localRepository}"/com/googlecode/jmockit/jmockit/0.999.12/jmockit-0.999.12.jar
     }
 }
 
